--- a/_config.yml
+++ b/_config.yml
@@ -86,12 +86,14 @@ content:
     content: |
       ![](images/SEED_Poster.jpg)
 
-
-      #### Overview
+      ___
+      
+      #### **Overview**
 
       It's a stylized 6-minute animation.
 
       Watch it on [**YouTube**](https://youtu.be/9jc6oblx0aY) or [**Vimeo**](https://vimeo.com/1137545512)
+      [![](http://img.youtube.com/vi/9jc6oblx0aY/0.jpg)](http://www.youtube.com/watch?v=9jc6oblx0aY)
 
       Created with Maya + RenderMan mainly. All visuals crafted independently; music composed collaboratively.
 
